Bug Fix: Device Memory leak (new release buffers API)

--- a/src/runtime_src/core/pcie/driver/linux/CMakeLists.txt
+++ b/src/runtime_src/core/pcie/driver/linux/CMakeLists.txt
@@ -1,1 +1,9 @@
 add_subdirectory(include)
+
+set(XRT_KERNEL_HEADERS
+  include/xocl_ioctl.h
+  include/xocl_kernel_api.h
+)
+
+
+install(FILES ${XRT_KERNEL_HEADERS} DESTINATION ${XRT_INSTALL_DIR}/include/kernel)
